Bug 299344 - Original sender is not kept when using "Send Again"
Summary: Original sender is not kept when using "Send Again"
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 4.8.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-05-04 06:55 UTC by Roger Larsson
Modified: 2012-05-09 18:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roger Larsson 2012-05-04 06:55:50 UTC
I have two configured accounts/identities - one private and one bussiness.

When I need to send a mail again (from the sent folder) I have to be really careful as my default account will be used i.e. not reusing the account that originally sent the mail.

Reproducible: Always

Steps to Reproduce:
1. Configure two or more identities
2. Create a email, select another account than default, send it
3. Open Sent folder, select "Send again..."
Actual Results:  
Sender is not kept - replaced with default sender

I would also guess that cryptographic signatures would be messed up / forgotten in the current process (but I do not use such features yet)

Expected Results:  
If I select send again there should be no need to change anything - the same mail with the same contents shold be sent again (new sent date...)
Comment 1 Laurent Montel 2012-05-07 14:08:26 UTC
I can confirm it.
It's because we don't store identity header.
Don't know for the moment how to fix it.
Will continue to investigate it
Comment 2 Laurent Montel 2012-05-09 18:50:41 UTC
Git commit 1e8da8daf2f04de885db202114bc53b226849e5c by Montel Laurent.
Committed on 09/05/2012 at 20:49.
Pushed by mlaurent into branch 'master'.

Fix Bug 299344 - Original sender is not kept when using "Send Again"

FIXED-IN: 4.8.4

M  +8    -0    agents/maildispatcher/sendjob.cpp

http://commits.kde.org/kdepim-runtime/1e8da8daf2f04de885db202114bc53b226849e5c
Comment 3 Laurent Montel 2012-05-09 18:51:29 UTC
Git commit bd9baf49a5d5f8a46e070dd594a82f7263fbb516 by Montel Laurent.
Committed on 09/05/2012 at 20:49.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 299344 - Original sender is not kept when using "Send Again"

FIXED-IN: 4.8.4
(cherry picked from commit 1e8da8daf2f04de885db202114bc53b226849e5c)

M  +8    -0    agents/maildispatcher/sendjob.cpp

http://commits.kde.org/kdepim-runtime/bd9baf49a5d5f8a46e070dd594a82f7263fbb516
Comment 4 Laurent Montel 2012-05-09 18:52:26 UTC
Git commit 50bbaa878529f16b5b9592c5ed1e38234edbd770 by Montel Laurent.
Committed on 09/05/2012 at 20:51.
Pushed by mlaurent into branch 'master'.

Fix Bug 299344 - Original sender is not kept when using "Send Again"

FIXED-IN: 4.8.4

M  +1    -1    messagecomposer/akonadisender.cpp
M  +1    -1    messagecomposer/composerviewbase.cpp
M  +4    -2    messagecore/stringutil.cpp
M  +1    -1    messagecore/stringutil.h

http://commits.kde.org/kdepim/50bbaa878529f16b5b9592c5ed1e38234edbd770
Comment 5 Laurent Montel 2012-05-09 18:53:04 UTC
Git commit a9108638ae8b943a24d411ec244ecc3943b09e2d by Montel Laurent.
Committed on 09/05/2012 at 20:51.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 299344 - Original sender is not kept when using "Send Again"

FIXED-IN: 4.8.4
(cherry picked from commit 50bbaa878529f16b5b9592c5ed1e38234edbd770)

M  +1    -1    messagecomposer/akonadisender.cpp
M  +1    -1    messagecomposer/composerviewbase.cpp
M  +4    -2    messagecore/stringutil.cpp
M  +1    -1    messagecore/stringutil.h

http://commits.kde.org/kdepim/a9108638ae8b943a24d411ec244ecc3943b09e2d