Fix Bug 299344 - Original sender is not kept when using "Send Again"

FIXED-IN: 4.8.4
BUG: 299344
(cherry picked from commit 1e8da8daf2f04de885db202114bc53b226849e5c)